<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessbility_suggestion_dropdown_closed">No suggestions available</string>
    <string name="accessbility_suggestion_dropdown_opened">Contact suggestions opened</string>
    <string name="account_cache_provider">Account Cache Provider</string>
    <string name="account_disambig_type_corp_subtitle">Your work email address</string>
    <string name="account_disambig_type_exchange_title">Exchange</string>
    <string name="account_disambig_type_google_subtitle">Gmail or Google Apps</string>
    <string name="account_disambig_type_google_title">Google</string>
    <string name="account_disambig_type_personal_subtitle">Yahoo, Outlook.com, etc.</string>
    <string name="account_disambig_type_personal_title">Personal (IMAP/POP)</string>
    <string name="account_duplicate_dlg_message_fmt">"You're already using this username for the account \"%s\"."</string>
    <string name="account_duplicate_dlg_title">Duplicate account</string>
    <string name="account_item">Switch to %1$s</string>
    <string name="account_item_default">Switch account</string>
    <string name="account_list">Account list</string>
    <string name="account_manager_type_exchange">com.google.android.gm.exchange</string>
    <string name="account_manager_type_google">com.google</string>
    <string name="account_manager_type_legacy_imap">com.google.android.gm.legacyimap</string>
    <string name="account_manager_type_pop3">com.google.android.gm.pop3</string>
    <string name="account_security_dialog_content_fmt">In order to use your account &lt;%s> you must update the security settings on your device. Contact your administrator for more information.</string>
    <string name="account_security_dialog_ok">Update now</string>
    <string name="account_security_policy_explanation_fmt">The server %s requires that you allow it to remotely control some security features of your Android device.</string>
    <string name="account_security_title">Device security</string>
    <string name="account_settings_action">Account settings</string>
    <string name="account_settings_background_attachments_label">Download attachments</string>
    <string name="account_settings_background_attachments_summary">Auto-download attachments to recent messages via Wi-Fi</string>
    <string name="account_settings_data_usage">Data usage</string>
    <string name="account_settings_description_label">Account name</string>
    <string name="account_settings_edit_quick_responses_label">Quick responses</string>
    <string name="account_settings_edit_quick_responses_summary">Edit text that you frequently insert when composing email</string>
    <string name="account_settings_enforced_label">Policies enforced</string>
    <string name="account_settings_enforced_summary">None</string>
    <string name="account_settings_exit_server_settings">Discard unsaved changes?</string>
    <string name="account_settings_incoming_label">Incoming settings</string>
    <string name="account_settings_incoming_summary">Username, password, and other incoming server settings</string>
    <string name="account_settings_mail_check_frequency_label">Sync frequency</string>
    <string name="account_settings_manage_notifications_label">Manage notifications</string>
    <string name="account_settings_name_label">Your name</string>
    <string name="account_settings_notifications">Notification settings</string>
    <string name="account_settings_notify_label">Email notifications</string>
    <string name="account_settings_notify_summary">Send notification when email arrives</string>
    <string name="account_settings_outgoing_label">Outgoing settings</string>
    <string name="account_settings_outgoing_summary">Username, password, and other outgoing server settings</string>
    <string name="account_settings_policies">Security policies</string>
    <string name="account_settings_retry_label">Attempt sync</string>
    <string name="account_settings_retry_summary">Tap here to sync this account</string>
    <string name="account_settings_ringtone">Choose ringtone</string>
    <string name="account_settings_security">Security</string>
    <string name="account_settings_security_s4_key" />
    <string name="account_settings_security_s4_label" />
    <string name="account_settings_servers">Server settings</string>
    <string name="account_settings_summary">Sync frequency, notifications, etc.</string>
    <string name="account_settings_sync_calendar_enable">Sync calendar</string>
    <string name="account_settings_sync_calendar_summary">Sync calendar event for this account</string>
    <string name="account_settings_sync_contacts_enable">Sync contacts</string>
    <string name="account_settings_sync_contacts_summary">Sync contacts for this account</string>
    <string name="account_settings_sync_email_enable">Sync email</string>
    <string name="account_settings_sync_email_summary">Sync email for this account</string>
    <string name="account_settings_unsupported_label">Unsupported policies</string>
    <string name="account_settings_unsupported_summary">None</string>
    <string name="account_setup_account_type_description">Choose account type</string>
    <string name="account_setup_account_type_instructions">What type of account is this?</string>
    <string name="account_setup_activity">com.google.android.gm.setup.AccountSetupFinalGmail</string>
    <string name="account_setup_add_account">If you also use a personal or Exchange email address, you can add it now.</string>
    <string name="account_setup_additional_info">More info needed to finish email setup</string>
    <string name="account_setup_autodiscover_dlg_authfail_message">Confirm username, password, and account settings are correct.</string>
    <string name="account_setup_autodiscover_dlg_authfail_title">Problem with account setup</string>
    <string name="account_setup_autodiscover_redirect_warning">To configure your account, Gmail is being asked to send account info to &lt;b>%s&lt;/b>. Is this OK?</string>
    <string name="account_setup_autodiscover_redirect_warning_title">Redirect request</string>
    <string name="account_setup_basics_email_label">Enter your email</string>
    <string name="account_setup_basics_headline">Add your email address</string>
    <string name="account_setup_basics_manual_setup_action">Manual setup</string>
    <string name="account_setup_basics_title">Account setup</string>
    <string name="account_setup_cannot_add_google_account">To add another Google Account, see Settings > Accounts after setup.</string>
    <string name="account_setup_check_settings_check_incoming_msg">Validating server settings…</string>
    <string name="account_setup_check_settings_check_outgoing_msg">Validating smtp settings…</string>
    <string name="account_setup_check_settings_error">Error in account setup: %1$s</string>
    <string name="debug_allow_non_system_partner_provider_app">Allow non-System PartnerProvider app</string>
    <string name="debug_clear_migration_state">Clear migration state</string>
    <string name="debug_clear_webview_cache">Clear WebView cache</string>
    <string name="debug_enable_account_setup_logo_landing">Account Setup Logo Landing</string>
    <string name="debug_enable_all_inboxes">Show All Inboxes</string>
    <string name="debug_enable_conversation_tracker">Enable noisy conversation logging</string>
    <string name="debug_enable_motion_drawer">Enable shake to open drawer</string>
    <string name="debug_enable_rv_label">Use RecyclerView</string>
    <string name="debug_enable_strict_mode_label">Enable strict mode (with logging)</string>
    <string name="debug_enable_webview_compose">Enable WebView Compose</string>
    <string name="debug_force_one_minute_refresh_label">Force 1-minute refresh for POP/IMAP</string>
    <string name="debug_task_schedule_notification">Schedule a task reminder notification</string>
    <string name="enable_debug_native_tracing">Enable Android native tracing with systrace</string>
    <string name="enable_debug_profile_capture">Enable profile capture button</string>
    <string name="enable_debug_xplat_tracing">Debug Xplat Tracing by turning off sampling</string>
    <string name="enable_startup_tracing">Enable startup tracing</string>
    <string name="g6y_setting_last_sync_title">Last sync</string>
    <string name="g6y_setting_unlink_title">Unlink account</string>
    <string name="g6y_settings_default_address_title">Default address</string>
    <string name="g6y_settings_title">Linked account</string>
    <string name="inboxTypeDefaultValue">default</string>
    <string name="preference_prefetch_attachments_summary">@string/account_settings_background_attachments_summary</string>
    <string name="preference_prefetch_attachments_title">@string/account_settings_background_attachments_label</string>
    <string name="preference_show_images_title">Images</string>
    <string name="preferences_inbox_categories_title">Inbox categories</string>
    <string name="preferences_inbox_type_title">Inbox type</string>
    <string name="preferences_manage_inbox_label_title">Inbox sound &amp; vibrate</string>
    <string name="preferences_manage_labels_title">Manage labels</string>
    <string name="preferences_manage_notifications_title">Manage notifications</string>
    <string name="preferences_notifications_enable">Notifications</string>
    <string name="preferences_signature_dialog_title">Signature</string>
    <string name="preferences_signature_title">Signature</string>
    <string name="preferences_sync_status">Sync Gmail</string>
    <string name="preferences_vacation_responder_title">Vacation responder</string>
    <string name="settings_number_of_days">Days of mail to sync</string>
</resources>